# wemo-exporter

./: Cargo.toml  Makefile  README.md  service.hcl  settings.yaml  setup.xml  wemo-exporter.nomad
.github/workflows/: rust.yml
service/: .deregister.json  .node.json  local-registration.json
src/: main.rs
src/config/: mod.rs
src/insights/: mod.rs  wemo.rs
src/types/: mod.rs
tests/data/: get_power.xml  get_power_response.xml
