[package]
name = "wemo-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
config = "0.13"